Better music transitions + added gitignore for builds

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Project/Assets/Background/LD47_Background.psd
 Project/Assets/Background/LD47_Background.psd.meta
+Builds/
