Clean Animations Enemy_02

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 Project/Assets/Background/LD47_Background.psd
 Project/Assets/Background/LD47_Background.psd.meta
 Builds/
+Project/Assets/Prefab/Background_02.prefab
+Project/Assets/Prefab/Background_02.prefab.meta
